--- a/source/index.html
+++ b/source/index.html
@@ -5,14 +5,23 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="./css/style.css" rel="stylesheet">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="./img/favicon32x32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./img/favicon152.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="page__body">
   <header class="header">
     <a class="header__logo" href="index.html">
-      <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
-        alt="Логотип компании Cat energy">
+      <picture>
+        <source media="(min-width: 1440px)" srcset="./img/logo-desktop.svg" width="202" height="57"
+          type="image/svg+xml">
+        <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg" width="175" height="51" type="image/svg+xml">
+        <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37" media="(min-width: 320px)"
+          alt="Логотип компании Cat energy">
+      </picture>
     </a>
     <img class="header__logo-text" src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
     <button class="header__nav-toogle" type="button">
@@ -22,13 +31,14 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--current" href="index.html">Главная</a>
+            <a class="main-nav__link main-nav__link--white main-nav__link--white--current main-nav__link--current"
+              href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link main-nav__link--white" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">Подбор программы</a>
+            <a class="main-nav__link main-nav__link--white" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
@@ -40,7 +50,13 @@
         <h1 class="intro__title">Функциональное питание для котов</h1>
         <p class="intro__description">Занялся собой? Займись котом!</p>
       </div>
-      <img class="intro__img" src="./img/index-can-mobile.png" alt="Cat energy PRO 1000г">
+      <picture>
+        <source media="(min-width: 1440px)" srcset="./img/index-can-desk.png, ./img/index-can-desk@2x.png 2x"
+          width="552" height="499">
+        <source media="(min-width: 768px)" srcset="./img/intro-can-tab.png, ./img/intro-can-tab@2x.png 2x" width="709"
+          height="609">
+        <img class="intro__img" src="./img/index-can-mobile.png" alt="Cat energy PRO 1000г">
+      </picture>
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы питания</h2>
@@ -50,14 +66,24 @@
         <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по
           деревьям?
           Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="programs__catalog-link" href="catalog.html">Каталог slim</a>
+        <a class="programs__catalog-link" href="catalog.html">Каталог slim
+          <svg class="programs__catalog-icon" width="32" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="#000" stroke-width="2" d="M0 6h18" />
+            <path d="m24 6-6.8 5.2V.8L24 6Z" fill="#000" />
+          </svg>
+        </a>
       </div>
       <div class="programs__wrapper">
         <h3 class="programs__title programs__gain">Набор массы</h3>
         <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
           Pro
           поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="programs__catalog-link" href="catalog.html">Каталог pro</a>
+        <a class="programs__catalog-link" href="catalog.html">Каталог pro
+          <svg class="programs__catalog-icon" width="32" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="#000" stroke-width="2" d="M0 6h18" />
+            <path d="m24 6-6.8 5.2V.8L24 6Z" fill="#000" />
+          </svg>
+        </a>
       </div>
     </section>
     <section class="advantages">
