--- a/7/catalog.html
+++ b/7/catalog.html
@@ -16,8 +16,13 @@
 <body class="page__body">
   <header class="header">
     <a class="header__logo" href="index.html">
-      <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
-        alt="Логотип компании Cat energy">
+      <picture>
+        <source media="(min-width: 1440px)" srcset="./img/logo-desktop.svg" width="202" height="57"
+          type="image/svg+xml">
+        <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg" width="175" height="51" type="image/svg+xml">
+        <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37" media="(min-width: 320px)"
+          alt="Логотип компании Cat energy">
+      </picture>
     </a>
     <img class="header__logo-text" src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
     <button class="header__nav-toogle" type="button">
@@ -260,34 +265,26 @@
         <ul class="products-extra__list">
           <li class="products-extra__card">
             <h3 class="products-extra__title">Сахарозаменитель</h3>
-            <div class="products-extra__description">
-              <p class="products-extra__weight">1 упаковка (100 г)</p>
-              <p class="products-extra__price">200 ₽</p>
-            </div>
+            <p class="products-extra__weight">1 упаковка (100 г)</p>
+            <p class="products-extra__price">200 ₽</p>
             <button class="button products-extra__order-button" type="button">Заказать</button>
           </li>
           <li class="products-extra__card">
             <h3 class="products-extra__title">Питьевая вода</h3>
-            <div class="products-extra__description">
-              <p class="products-extra__weight">5 литров</p>
-              <p class="products-extra__price">50 ₽</p>
-            </div>
+            <p class="products-extra__weight">5 литров</p>
+            <p class="products-extra__price">50 ₽</p>
             <button class="button products-extra__order-button" type="button">Заказать</button>
           </li>
           <li class="products-extra__card">
             <h3 class="products-extra__title">Молоко</h3>
-            <div class="products-extra__description">
-              <p class="products-extra__weight">1 литр</p>
-              <p class="products-extra__price">100 ₽</p>
-            </div>
+            <p class="products-extra__weight">1 литр</p>
+            <p class="products-extra__price">100 ₽</p>
             <button class="button products-extra__order-button" type="button">Заказать</button>
           </li>
           <li class="products-extra__card">
             <h3 class="products-extra__title">Витамины</h3>
-            <div class="products-extra__description">
-              <p class="products-extra__weight">1 упаковка (30 г)</p>
-              <p class="products-extra__price">300 ₽</p>
-            </div>
+            <p class="products-extra__weight">1 упаковка (30 г)</p>
+            <p class="products-extra__price">300 ₽</p>
             <button class="button products-extra__order-button" type="button">Заказать</button>
           </li>
         </ul>
