--- a/7/index.html
+++ b/7/index.html
@@ -56,7 +56,7 @@
           width="552" height="499">
         <source media="(min-width: 768px)" srcset="./img/intro-can-tab.png, ./img/intro-can-tab@2x.png 2x" width="709"
           height="609">
-        <img class="intro__img" src="./img/index-can-mobile.png" alt="Cat energy PRO 1000г">
+        <img class="intro__img" src="./img/index-can-mobile.png" width="280" height="270" alt="Cat energy PRO 1000г">
       </picture>
     </section>
     <section class="programs">
