--- a/source/index.html
+++ b/source/index.html
@@ -151,7 +151,9 @@
     </section>
     <ul class="page-footer__list">
       <li class="page-footer__item">
-        <img class="page-footer__logo-text" src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+        <a class="page-footer__link" href="#top">
+          <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+        </a>
       </li>
       <li class="page-footer__item">
         <a class="page-footer__link" href="https://vk.com/htmlacademy">
