--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="./css/style.css" rel="stylesheet">
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="./img/favicon32x32.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="./img/favicon152.png">
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="img/favicon32x32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon152.png">
+  <link rel="manifest" href="./manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -51,6 +51,12 @@
         <p class="intro__description">Занялся собой? Займись котом!</p>
       </div>
       <picture>
+        <source type="image/webp" media="(min-width: 1220px)"
+          srcset="./img/index-can-desk.webp, ./img/index-can-desk@2x.webp 2x" width="552" height="499">
+        <source type="image/webp" media="(min-width: 708px)"
+          srcset="./img/intro-can-tab.webp, ./img/intro-can-tab@2x.webp 2x" width="709" height="609">
+        <source type="image/webp" srcset="./img/index-can-mob.webp, ./img/intro-can-mob@2x.webp 2x" width="280"
+          height="270">
         <source media="(min-width: 1440px)" srcset="./img/index-can-desk.png, ./img/index-can-desk@2x.png 2x"
           width="552" height="499">
         <source media="(min-width: 768px)" srcset="./img/intro-can-tab.png, ./img/intro-can-tab@2x.png 2x" width="709"
