--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="./css/style.css" rel="stylesheet">
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicon32x32.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon152.png">
-  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -51,7 +51,8 @@
           alt="Логотип компании Cat energy">
       </picture>
     </a>
-    <img class="header__logo-text" src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+    <img class="header__logo-text" src="./img/logo-text.svg" width="101" height="18"
+      alt="Текстовый логотип компании Cat energy">
     <button class="header__nav-toogle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
@@ -94,7 +95,7 @@
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы питания</h2>
-      <a class="programs__button button" href="form.html">Подбор программы</a>
+      <a class="programs__button button" href="form.html">Подобрать программу</a>
       <div class="programs__wrapper">
         <h3 class="programs__title programs__loss">Похудение</h3>
         <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по
@@ -140,7 +141,7 @@
         </li>
         <li class="advantages__item">
           <p class="advantages__description  advantages__duration">Уже через месяц наслаждайтесь
-            изменениями к лучшему вашего питомца!</p>
+            изменениями к лучшему<br>вашего питомца!</p>
         </li>
       </ul>
     </section>
@@ -174,7 +175,7 @@
   <footer class="page-footer">
     <section class="page-footer__partnership partnership">
       <div class="partnership__wrapper">
-        <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
+        <h2 class="partnership__title partnership__title--small">Приглашаем<br>к сотрудничеству дилеров!</h2>
         <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <iframe
