--- a/8/catalog.html
+++ b/8/catalog.html
@@ -6,8 +6,8 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link href="./css/style.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="./img/favicon32x32.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="./img/favicon152.png">
+  <link rel="icon" href="img/favicon32x32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon152.png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="https://htmlacademy-adaptive.github.io/2205907-cat-energy-27/8/">
@@ -48,7 +48,8 @@
           alt="Логотип компании Cat energy">
       </picture>
     </a>
-    <img class="header__logo-text" src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+    <img class="header__logo-text" src="./img/logo-text.svg" width="101" height="18"
+      alt="Текстовый логотип компании Cat energy">
     <button class="header__nav-toogle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
@@ -78,7 +79,7 @@
             <source media="(min-width: 768px)"
               srcset="./img/catalog-cards-img/catalog-1-desktop.png, ./img/catalog-cards-img/catalog-1-desktop@2x.png 2x"
               width="163" height="174">
-            <img class="products__img" src="./img/catalog-cards-img/catalog-1-desktop.png" width="68" height="86"
+            <img class="products__img" src="./img/catalog-cards-img/catalog-1-desktop.png" width="75" height="93"
               alt="Cat Energy PRO 500 г (Курица)">
           </picture>
           <div class="products__descritpion">
@@ -86,7 +87,7 @@
             <table class="products__options">
               <tbody>
                 <tr>
-                  <td>Объем</td>
+                  <td>Масса</td>
                   <td>500 г</td>
                 </tr>
                 <tr>
@@ -108,14 +109,14 @@
               srcset="./img/catalog-cards-img/catalog-2-desktop.png, ./img/catalog-cards-img/catalog-2-desktop@2x.png 2x"
               width="168" height="206">
             <img class="products__img products__img--large" src="./img/catalog-cards-img/catalog-2-desktop.png"
-              width="83" height="100" alt="Cat Energy PRO 1000 г (Рыба)">
+              width="84" height="100" alt="Cat Energy PRO 1000 г (Рыба)">
           </picture>
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy PRO 1000 Г</h3>
             <table class="products__options">
               <tbody>
                 <tr>
-                  <td>Объем</td>
+                  <td>Масса</td>
                   <td>1000 г</td>
                 </tr>
                 <tr>
@@ -136,7 +137,7 @@
             <source media="(min-width: 768px)"
               srcset="./img/catalog-cards-img/catalog-3-desktop.png, ./img/catalog-cards-img/catalog-3-desktop@2x.png 2x"
               width="161" height="172">
-            <img class="products__img" src="./img/catalog-cards-img/catalog-3-desktop.png" width="68" height="86"
+            <img class="products__img" src="./img/catalog-cards-img/catalog-3-desktop.png" width="75" height="83"
               alt="Cat Energy PRO 500 г (Рыба)">
           </picture>
           <div class="products__descritpion">
@@ -144,7 +145,7 @@
             <table class="products__options">
               <tbody>
                 <tr>
-                  <td>Объем</td>
+                  <td>Масса</td>
                   <td>500 г</td>
                 </tr>
                 <tr>
@@ -173,7 +174,7 @@
             <table class="products__options">
               <tbody>
                 <tr>
-                  <td>Объем</td>
+                  <td>Масса</td>
                   <td>1000 г</td>
                 </tr>
                 <tr>
@@ -194,7 +195,7 @@
             <source media="(min-width: 768px)"
               srcset="./img/catalog-cards-img/catalog-5-desktop.png, ./img/catalog-cards-img/catalog-5-desktop@2x.png 2x"
               width="161" height="171">
-            <img class="products__img" src="./img/catalog-cards-img/catalog-5-desktop.png" width="68" height="78"
+            <img class="products__img" src="./img/catalog-cards-img/catalog-5-desktop.png" width="75" height="83"
               alt="Cat Energy SLIM 500 г (Гречка)">
           </picture>
           <div class="products__descritpion">
@@ -202,7 +203,7 @@
             <table class="products__options">
               <tbody>
                 <tr>
-                  <td>Объем</td>
+                  <td>Масса</td>
                   <td>500 г</td>
                 </tr>
                 <tr>
@@ -231,7 +232,7 @@
             <table class="products__options">
               <tbody>
                 <tr>
-                  <td>Объем</td>
+                  <td>Масса</td>
                   <td>1000 г</td>
                 </tr>
                 <tr>
@@ -252,7 +253,7 @@
             <source media="(min-width: 768px)"
               srcset="./img/catalog-cards-img/catalog-7-desktop.png, ./img/catalog-cards-img/catalog-7-desktop@2x.png 2x"
               width="163" height="174">
-            <img class="products__img" src="./img/catalog-cards-img/catalog-7-desktop.png" width="72" height="84"
+            <img class="products__img" src="./img/catalog-cards-img/catalog-7-desktop.png" width="79" height="91"
               alt="Cat Energy SLIM 500 г (Рис)">
           </picture>
           <div class="products__descritpion">
@@ -260,7 +261,7 @@
             <table class="products__options">
               <tbody>
                 <tr>
-                  <td>Объем</td>
+                  <td>Масса</td>
                   <td>500 г</td>
                 </tr>
                 <tr>
@@ -322,8 +323,8 @@
   </main>
   <footer class="page-footer">
     <section class="page-footer__partnership partnership">
-      <div class="partnership__wrapper">
-        <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
+      <div class="partnership__wrapper partnership__wrapper--grey-bg">
+        <h2 class="partnership__title partnership__title--small">Приглашаем<br>к сотрудничеству дилеров!</h2>
         <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <iframe
@@ -335,7 +336,14 @@
     <ul class="page-footer__list">
       <li class="page-footer__item">
         <a class="page-footer__link" href="#top">
-          <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="./img/logo-text--tab.svg" width="143" height="26"
+              type="image/svg+xml">
+            <source media="(min-width: 768px)" srcset="./img/logo-text--tab.svg" width="143" height="26"
+              type="image/svg+xml">
+            <img class="page-footer__logo-text" src="./img/logo-text.svg" width="128" height="24"
+              alt="Текстовый логотип компании Cat energy">
+          </picture>
         </a>
       </li>
       <li class="page-footer__item">
