--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,8 @@
         d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" />
     </symbol>
   </svg>
-  <header class="header"><a class="header__logo" href="index.html">
+  <header class="header">
+    <a class="header__logo" href="index.html">
       <picture>
         <source media="(min-width: 1440px)" srcset="./img/logo-desktop.svg" width="202" height="57"
           type="image/svg+xml">
@@ -43,16 +44,25 @@
         <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37" media="(min-width: 320px)"
           alt="Логотип компании Cat energy">
       </picture>
-    </a><img class="header__logo-text" src="./img/logo-text.svg" width="101" height="18"
-      alt="Текстовый логотип компании Cat energy"> <button class="header__nav-toogle" type="button"><span
-        class="visually-hidden">Открыть меню</span></button>
+    </a>
+    <img class="header__logo-text" src="./img/logo-text.svg" width="101" height="18"
+      alt="Текстовый логотип компании Cat energy">
+    <button class="header__nav-toogle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
-          <li class="main-nav__item"><a class="main-nav__link main-nav__link--current" href="form.html">Подбор
-              программы</a></li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--current" href="form.html">Подбор
+              программы</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -65,56 +75,82 @@
         <section class="form__field-group form__field-group--pet">
           <h3 class="visually-hidden">Данные кота</h3>
           <ul class="form__list">
-            <li><label class="form__pet-label" for="pet-name">Имя:*</label> <input class="form__pet-input" type="text"
-                id="pet-name" placeholder="Введите имя кота" required></li>
-            <li><label class="form__pet-label form__pet-label--mid-long" for="pet-weight">Вес (кг):*</label> <input
-                class="form__pet-input" type="number" id="pet-weight" min="1" max="100" placeholder="Введите вес кота"
-                required></li>
-            <li><label class="form__pet-label form__pet-label--long" for="pet-age">Возраст (лет):</label> <input
-                class="form__pet-input" type="number" id="pet-age" min="1" max="100" placeholder="Введите возраст кота"
-                required></li>
+            <li>
+              <label class="form__pet-label" for="pet-name">Имя:*</label>
+              <input class="form__pet-input" type="text" id="pet-name" placeholder="Введите имя кота" required>
+            </li>
+            <li>
+              <label class="form__pet-label form__pet-label--mid-long" for="pet-weight">Вес (кг):*</label>
+              <input class="form__pet-input" type="number" id="pet-weight" min="1" max="100"
+                placeholder="Введите вес кота" required>
+            </li>
+            <li>
+              <label class="form__pet-label form__pet-label--long" for="pet-age">Возраст (лет):</label>
+              <input class="form__pet-input" type="number" id="pet-age" min="1" max="100"
+                placeholder="Введите возраст кота" required>
+            </li>
           </ul>
         </section>
         <section class="form__field-group form__field-group--radios radios">
           <h3 class="visually-hidden">Выбор программы</h3>
           <ul class="form__list form__list-wrapper">
-            <li><input class="radios__input" type="radio" id="weight-loss" name="program-selection" checked="checked">
+            <li>
+              <input class="radios__input" type="radio" id="weight-loss" name="program-selection" checked="checked">
               <label class="radios__label" for="weight-loss">Похудение</label>
             </li>
-            <li><input class="radios__input" type="radio" id="weight-gain" name="program-selection"> <label
-                class="radios__label" for="weight-gain">Набор массы</label></li>
-            <li><input class="radios__input" type="radio" id="advise-required" name="program-selection"> <label
-                class="radios__label" for="advise-required">Не знаю (Нужен ваш совет)</label></li>
+            <li>
+              <input class="radios__input" type="radio" id="weight-gain" name="program-selection">
+              <label class="radios__label" for="weight-gain">Набор массы</label>
+            </li>
+            <li>
+              <input class="radios__input" type="radio" id="advise-required" name="program-selection">
+              <label class="radios__label" for="advise-required">Не знаю (Нужен ваш совет)</label>
+            </li>
           </ul>
         </section>
       </div>
       <section class="form__field-group form__field-group--email-tel">
         <h3 class="form__title form__title--email-tel">Контактные данные (владельца кота)</h3>
         <ul class="form__list">
-          <li><label class="form__mail-label" for="email">E-mail:*</label> <input class="form__mail-input" type="email"
-              id="email" name="email" placeholder="Введите e-mail"></li>
-          <li><label class="form__tel-label" for="tel">Телефон:*</label> <input class="form__tel-input" type="tel"
-              id="tel" name="tel" placeholder="+7"></li>
+          <li>
+            <label class="form__mail-label" for="email">E-mail:*</label>
+            <input class="form__mail-input" type="email" id="email" name="email" placeholder="Введите e-mail">
+          </li>
+          <li>
+            <label class="form__tel-label" for="tel">Телефон:*</label>
+            <input class="form__tel-input" type="tel" id="tel" name="tel" placeholder="+7">
+          </li>
         </ul>
       </section>
       <section class="form__field-group form__field-group--comment">
-        <h3 class="form__title form__title--comment">Комментарий</h3><textarea class="form__textarea"
-          name="pet__description" cols="20" rows="6" placeholder="Расскажите обо всех повaдках кота"></textarea>
+        <h3 class="form__title form__title--comment">Комментарий</h3>
+        <textarea class="form__textarea" name="pet__description" cols="20" rows="6"
+          placeholder="Расскажите обо всех повaдках кота">
+        </textarea>
       </section>
       <section class="form__field-group form__field-group--checkboxes checkboxes">
         <h3 class="form__title form__title--checkboxes">Дополнительно</h3>
         <ul class="form__list">
-          <li><input class="checkboxes__input" type="checkbox" id="sugar-free" name="sugar-free"> <label
-              class="checkboxes__label" for="sugar-free">Сахарозаменитель</label></li>
-          <li><input class="checkboxes__input" type="checkbox" id="water" name="water"> <label class="checkboxes__label"
-              for="water">Питьевая вода</label></li>
-          <li><input class="checkboxes__input" type="checkbox" id="milk" name="milk"> <label class="checkboxes__label"
-              for="milk">Молоко</label></li>
-          <li><input class="checkboxes__input" type="checkbox" id="vitamins" name="vitamins"> <label
-              class="checkboxes__label" for="vitamins">Витамины</label></li>
+          <li>
+            <input class="checkboxes__input" type="checkbox" id="sugar-free" name="sugar-free">
+            <label class="checkboxes__label" for="sugar-free">Сахарозаменитель</label>
+          </li>
+          <li>
+            <input class="checkboxes__input" type="checkbox" id="water" name="water">
+            <label class="checkboxes__label" for="water">Питьевая вода</label>
+          </li>
+          <li>
+            <input class="checkboxes__input" type="checkbox" id="milk" name="milk">
+            <label class="checkboxes__label" for="milk">Молоко</label>
+          </li>
+          <li>
+            <input class="checkboxes__input" type="checkbox" id="vitamins" name="vitamins">
+            <label class="checkboxes__label" for="vitamins">Витамины</label>
+          </li>
         </ul>
       </section>
-      <div class="form__reqired-wrapper"><button class="form__submit-button button" type="submit">Отправить
+      <div class="form__reqired-wrapper">
+        <button class="form__submit-button button" type="submit">Отправить
           заявку</button>
         <p class="form__required-mark">* — Обязательные поля</p>
       </div>
@@ -125,41 +161,57 @@
       <div class="partnership__wrapper partnership__wrapper--grey-bg">
         <h2 class="partnership__title partnership__title--small">Приглашаем<br>к сотрудничеству дилеров!</h2>
         <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </div><iframe
+      </div>
+      <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
         width="320" height="362" allowfullscreen title="Мы на ходимся здесь: ул. Большая
         Конюшенная, д. 19/8
-        Санкт-Петербург"></iframe>
+        Санкт-Петербург">
+      </iframe>
     </section>
     <ul class="page-footer__list">
-      <li class="page-footer__item"><a class="page-footer__link" href="#top">
+      <li class="page-footer__item">
+        <a class="page-footer__link" href="#top">
           <picture>
             <source media="(min-width: 1440px)" srcset="./img/logo-text--tab.svg" width="143" height="26"
               type="image/svg+xml">
             <source media="(min-width: 768px)" srcset="./img/logo-text--tab.svg" width="143" height="26"
-              type="image/svg+xml"><img class="page-footer__logo-text" src="./img/logo-text.svg" width="128" height="24"
+              type="image/svg+xml">
+            <img class="page-footer__logo-text" src="./img/logo-text.svg" width="128" height="24"
               alt="Текстовый логотип компании Cat energy">
           </picture>
-        </a></li>
-      <li class="page-footer__item"><a class="page-footer__link" href="https://vk.com/htmlacademy"><span
-            class="visually-hidden">Вконтакте</span> <svg class="page-footer__link-social" width="27" height="17"
-            viewBox="0 0 27 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        </a>
+      </li>
+      <li class="page-footer__item">
+        <a class="page-footer__link" href="https://vk.com/htmlacademy"><span class="visually-hidden">Вконтакте</span>
+          <svg class="page-footer__link-social" width="27" height="17" viewBox="0 0 27 17" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="#vk-icon"></use>
-          </svg> </a><a class="page-footer__link" href="https://www.youtube.com/user/htmlacademyru"><span
-            class="visually-hidden">Ютуб</span> <svg class="page-footer__link-social" width="24" height="19"
-            viewBox="0 0 24 19" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          </svg>
+        </a>
+        <a class="page-footer__link" href="https://www.youtube.com/user/htmlacademyru">
+          <span class="visually-hidden">Ютуб</span>
+          <svg class="page-footer__link-social" width="24" height="19" viewBox="0 0 24 19" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="#yt-icon"></use>
-          </svg> </a><a class="page-footer__link" href="https://telegram.me/htmlacademy"><span
-            class="visually-hidden">Телеграм</span> <svg class="page-footer__link-social" width="20" height="18"
-            viewBox="0 0 20 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          </svg>
+        </a>
+        <a class="page-footer__link" href="https://telegram.me/htmlacademy"><span
+            class="visually-hidden">Телеграм</span>
+          <svg class="page-footer__link-social" width="20" height="18" viewBox="0 0 20 18" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="#tg-icon"></use>
-          </svg></a></li>
-      <li class="page-footer__item"><a class="page-footer__link page-footer__link-hmtlac"
-          href="https://htmlacademy.ru/">HTML Academy</a> <a href="https://htmlacademy.ru/"><svg
-            class="page-footer__link-academy" width="27" height="34" viewBox="0 0 27 34" fill="currentColor"
+          </svg>
+        </a>
+      </li>
+      <li class="page-footer__item">
+        <a class="page-footer__link page-footer__link-hmtlac" href="https://htmlacademy.ru/">HTML Academy</a>
+        <a href="https://htmlacademy.ru/">
+          <svg class="page-footer__link-academy" width="27" height="34" viewBox="0 0 27 34" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="#htmlacademy"></use>
-          </svg></a>
+          </svg>
+        </a>
       </li>
     </ul>
   </footer>
